--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Deploy postgres
-        uses: brentd/fly-staging-app@v1
-        with:
-          image: flyio/postgres
-          name: ${{secrets.PG_NAME}}
       - name: Deploy app
         uses: superfly/flyctl-actions/setup-flyctl@master
-        run: flyctl deploy --remote-only
+      - name: Deploy postgres
+          uses: brentd/fly-staging-app@v1
+          with:
+            image: flyio/postgres
+            name: ${{secrets.PG_NAME}}
+      - run: flyctl deploy --remote-only
         with:
           postgres: ${{secrets.PG_NAME}}
