--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,13 @@
-name: Ms365bot
+name: Deploy to Fly
 on: [push]
-env:
-  FLY_API_TOKEN: ${{secrets.FLY_API_TOKEN}}
-  TOKEN: ${{secrets.BOT_TOKEN}}
-  ADMIN_ID: ${{secrets.ADMIN_ID}}
 jobs:
   deploy:
-    name: Deploy app
+    name: Deploy proxy
     runs-on: ubuntu-latest
     steps:
+      # This step checks out a copy of your repository.
       - uses: actions/checkout@v2
-
-      - name: Deploy app
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Deploy postgres
-        uses: brentd/fly-staging-app@v1
-        with:
-          image: flyio/postgres
-          name: ${{secrets.PG_NAME}}
+      - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
-        with:
-          postgres: ${{secrets.PG_NAME}}
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
