--- a/.github/workflows/bot.yaml
+++ b/.github/workflows/bot.yaml
@@ -1,5 +1,5 @@
 name: Fly Deploy
-on: [push]
+on: [workflow_dispatch]
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   APP_NAME: ${{ secrets.APP_NAME }}
