--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml file generated for microsoft on 2022-08-29T15:58:36+08:00
+# fly.toml file generated for microsoft on 2022-10-22T22:14:38+08:00
 
 app = "microsoft"
 kill_signal = "SIGINT"
@@ -6,10 +6,10 @@ kill_timeout = 5
 processes = []
 
 [build]
-  builder = "paketobuildpacks/builder:base"
+  builder = "heroku/buildpacks:latest"
 
 [env]
-  PORT = 8080
+  PORT = "8080"
 
 [experimental]
   allowed_public_ports = []
@@ -21,7 +21,6 @@ processes = []
   processes = ["app"]
   protocol = "tcp"
   script_checks = []
-
   [services.concurrency]
     hard_limit = 25
     soft_limit = 20
