--- a/.github/workflows/bot.yaml
+++ b/.github/workflows/bot.yaml
@@ -5,9 +5,9 @@ env:
   APP_NAME: ${{ secrets.APP_NAME }}
 jobs:
   deploy:
-      name: env.APP_NAME
+      name: Microsoft-bot
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
         - uses: superfly/flyctl-actions/setup-flyctl@master
-        - run: flyctl deploy --remote-only
+        - run: flyctl deploy --app env.APP_NAME --remote-only
